@@ -9,6 +9,7 @@ Known issues:
 
 Release notes 0.4.4 (TBA)
 - Update to Grails 1.3.1.
+- Further PicasaService code coverage.
 
 Release notes 0.4.3 (16th May 2010)
 - Change PicasaService scope to "session".
